# nature-pixel

./: Cargo.toml  README.md  config.json
config/: config.json
src/: cell.rs  cell_color.rs  config.rs  ecosystem.rs  get_map.rs  main.rs  map.rs  monitored_rwlock.rs  point.rs  set_cell_color.rs  web_error.rs
src/cell/: cell_animal.rs  cell_grass.rs  cell_water.rs
src/ecosystem/: amphibian.rs  insect.rs  simple_animal.rs  snake.rs  water.rs  water_cycle.rs  water_flow.rs
web/: index.html  index.js  interactive_canvas.js  main.js  pixel_map.js  style.css
