[package]
name = "nature-pixel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.20"
itertools = "0.11.0"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.31.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
